--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 <body>
     <!-- Google Tag Manager (noscript) should go here-->
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F5571DVPK2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-F5571DVPK2');
+</script>
     <header>
         <nav>
             <ul>
